--- a/index.html
+++ b/index.html
@@ -2,53 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="css/styles.css">
 
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+  <main>    
+    <section class="sign-up-page sign-up-page--active">
+      <img alt="sign-up" class="sign-up__image--mobile" src="assets/images/illustration-sign-up-mobile.svg">
+      <img alt="sign-up" class="sign-up__image--desktop" src="assets/images/illustration-sign-up-desktop.svg">
+      <div class="container">
+        <h1 class="sign-up__title">Stay updated!</h1>
+        <h2 class="sign-up__description">Join 60,000+ product managers receiving monthly updates on:</h2>
+        <ul class="sign-up__list-of-benefits">
+          <li class="list-item__benefit">
+            <img src="assets/images/icon-list.svg" alt="icon-list">
+            <p>Product discovery and building what matters</p>
+          </li>
+          <li class="list-item__benefit">
+            <img src="assets/images/icon-list.svg" alt="icon-list">
+            <p>Measuring to ensure updates are a success</p>
+          </li>
+          <li class="list-item__benefit">
+            <img src="assets/images/icon-list.svg" alt="icon-list">
+            <p>And much more!</p>
+          </li>
+        </ul>
+        <form id="form">
+          
+          <div class="label">
+            <label for="email" class="label__email">Email address</label>
+            <span class="label__error">Valid email required</span>
+          </div>
 
-  <!-- Sign-up form start -->
+          <input type="text" id="email" placeholder="email@company.com"></input>
+          <button class="btn__subscripe" type="submit">
+            <span class="subscribe-text">Subscribe to monthly newsletter</span>
+          </button>
+        </form>
+      </div>
+    </section>
 
-  Stay updated!
-
-  Join 60,000+ product managers receiving monthly updates on:
-
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
-
-  Email address
-  email@company.com
-
-  Subscribe to monthly newsletter
-
-  <!-- Sign-up form end -->
-
-  <!-- Success message start -->
-
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
-  <!-- Success message end -->
+    <section class="success-message">
+      <div class="content">
+        <img src="assets/images/icon-success.svg" alt="success-icon" class="success-icon">
+        <h1 class="success-message__title">Thanks for subscribing!</h1>
+        <p class="success-message__description">
+          A confirmation email has been sent to <span>ash@loremcompany.com</span>.
+          Please open it and click the button inside to confirm your subscription.
+        </p>
+      </div>
+      <div class="success-message__btn--dismiss"><span>Dismiss message</span></div>
+    </section>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://github.com/Alexandru736/newsletter-sign-up">Alex Ionita</a>.
+  </footer>
 
   <script src="js/main.js"></script>
 </body>
